LPS-37395 Alignment issues align aui:button with aui:inputs

--- a/portal-web/docroot/html/css/portal/forms.css
+++ b/portal-web/docroot/html/css/portal/forms.css
@@ -40,6 +40,10 @@
 	}
 }
 
+.field-wrapper .btn {
+	margin-top: 6px;
+}
+
 .lfr-input-resource {
 	width: @model_hints_constants_text_display_width@px;
 }
